--- a/example/demo.html
+++ b/example/demo.html
@@ -9,8 +9,9 @@
 <script id="tpl-example" type="text/html">
     <div> <%= $data.name %></div>
     <div> <%= $tools.formatDate($data.date) %></div>
-    <% for(var i=0,j=$data.length;i<j;i++){ %>
-            <div><%= $data[i]%></div>
+    <% var list=$data.list; %>
+    <% for(var i=0,j=list.length;i<j;i++){ %>
+            <div><%= list[i]%></div>
     <% } %>
 </script>
 <script src="../src/tpl.js"></script>
